--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@u-wave/react-vimeo": "0.9.5",
+    "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-onesignal": "2.0.3",
-    "react-spring": "9.4.3",
     "sass": "1.49.9"
   },
   "devDependencies": {
